WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
311002
Fix :placeholder-shown to match elements with empty placeholder attributes
https://bugs.webkit.org/show_bug.cgi?id=311002
Summary
Fix :placeholder-shown to match elements with empty placeholder attributes
Ahmad Saleem
Reported
2026-03-28 15:54:02 PDT
ssia
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-03-28 15:54:11 PDT
<
rdar://problem/173604635
>
Ahmad Saleem
Comment 2
2026-03-28 15:59:47 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61595
EWS
Comment 3
2026-04-08 08:12:49 PDT
Committed
310781@main
(b6ea7219106b): <
https://commits.webkit.org/310781@main
> Reviewed commits have been landed. Closing PR #61595 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug